--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,14 +7,14 @@
   </ul> -->
   <div id="mobile">
     <div class="splash" [ngClass]="{'hide': hiddenSplash}">
-  <a href="#campus" id="mobileSplashScreen"><img src="assets/images/titlecard.png"
-      alt="Final Show 2020" id="titleCard">
-  </a>
+      <a href="#campus" id="mobileSplashScreen"><img src="assets/images/titlecard.png" alt="Final Show 2020"
+          id="titleCard">
+      </a>
     </div>
 
 
     <div id="campus" [ngClass]="{'hide': hiddenSplash}">
-            <a class="button" [routerLink]="['/rooms']" routerLinkActive="router-link-active" >Enter Campus Kaai</a>
+      <a class="button" [routerLink]="['/rooms']" routerLinkActive="router-link-active">Enter Campus Kaai</a>
       <img src="assets/images/campusV3.png" alt="campus kaai">
 
     </div>
