--- a/src/app/components/livestream/livechat/livechat.component.html
+++ b/src/app/components/livestream/livechat/livechat.component.html
@@ -17,14 +17,14 @@
     </div>
     <div class="userinput">
       <div class="clap">
-        <img src="assets/images/clap.png" alt="">
+        <img src="assets/images/theclap.svg" alt="">
       </div>
       <div class="message">
         <input type="text" placeholder="Type your message..">
       </div>
 
       <div class="send">
-        <img src="assets/images/send.png" alt="">
+        <img src="assets/images/send.svg" alt="">
       </div>
     </div>
 
