chat notification en notifications

--- a/src/app/components/livestream/livestream/livestream.component.html
+++ b/src/app/components/livestream/livestream/livestream.component.html
@@ -7,3 +7,15 @@
 <div class="chat">
    <app-livechat></app-livechat>
 </div>
+
+
+
+<div class="notifications">
+
+
+<!-- <div *ngFor="let notification of liveStreamNotifications">
+<app-notification  [notif]=notification></app-notification>
+</div> -->
+
+</div>
+
