--- a/src/app/components/desktoplanding/desktoplanding.component.scss
+++ b/src/app/components/desktoplanding/desktoplanding.component.scss
@@ -5,6 +5,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  background-color: black
 }
 
 h2 {
@@ -15,9 +16,40 @@ h2 {
   left: 10%;
   color: #4FCDC4;
   text-shadow: 2px 2px #f98a8a;
+  cursor: default;
 
 }
 
 h2 span {
   line-height: 1em;
+}
+
+#loadbarcontainer {
+  height: 50px;
+  position: absolute;
+  width: 20%;
+  left: 40%;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+#loadbarcontainer h3 {
+  color: white;
+  align-self: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#loadbar {
+  background-color: white;
+  height: 20%;
+  justify-self: center;
+  width: 0%;
+}
+
+#loadbar::after {
+  width: 100%;
+  border: 0.5px solid red;
 }
