begin desktop css

--- a/src/app/components/livestream/livestream/livestream.component.html
+++ b/src/app/components/livestream/livestream/livestream.component.html
@@ -1,4 +1,7 @@
+
+   
 <app-header></app-header>
+<div class="page-wrap container-grid">
 
 <div class="video-container">
    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ferasmushogeschool%2Fvideos%2F565528797492267%2F&show_text=0" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
@@ -6,4 +9,5 @@
 
 <div class="chat">
    <app-livechat></app-livechat>
+</div>
 </div>
