--- a/src/app/components/network/login/login.component.scss
+++ b/src/app/components/network/login/login.component.scss
@@ -68,7 +68,7 @@ button {
 }
 
 button.active{
-  border: 1px solid #F9D48A;
+  // border: 1px solid #F9D48A;
 }
 button.google-btn{
 display: flex;
