--- a/src/app/components/livestream/livestream/livestream.component.scss
+++ b/src/app/components/livestream/livestream/livestream.component.scss
@@ -1,5 +1,7 @@
 // solution from https://www.ostraining.com/blog/coding/responsive-facebook-videos/
-
+.page-wrap{
+  width: 100%;
+}
 .video-container{
   overflow:hidden;
   padding-bottom:56.25%;
@@ -32,3 +34,15 @@
 //     font-weight: normal;
 //     font-size: 13pt;
 // }
+
+@media only screen and (min-width: 768px) {
+  .video-container{
+  grid-column: 2/ span 7;
+  grid-row: 4/ span 2;
+  margin-top: 0;
+}
+  .chat{
+    grid-column: 8/ span 3;
+    grid-row: 4/ span 3;
+  }
+}
