Admin panel: create and delete rooms, change stream url

--- a/src/app/components/admin/adminheader/adminheader.component.html
+++ b/src/app/components/admin/adminheader/adminheader.component.html
@@ -8,6 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link" [routerLink]="'/admin/timetable'" routerLinkActive="active">Timetable</a>
+      <a class="nav-item nav-link" [routerLink]="'/admin/livestream'" routerLinkActive="active">Livestream</a>
       <a class="nav-item nav-link" [routerLink]="'/admin/users'" routerLinkActive="active">Users</a>
       <a class="nav-item nav-link" [routerLink]="'/admin/chat'" routerLinkActive="active">Chat</a>
       <a class="nav-item nav-link" [routerLink]="'/admin/notifications'" routerLinkActive="active">Notifications</a>
