--- a/src/app/components/admin/adminhome/adminhome.component.html
+++ b/src/app/components/admin/adminhome/adminhome.component.html
@@ -6,6 +6,7 @@
     <h4 class="font-weight-light">Wat wil je aanpassen?</h4>
     <div class="mt-5">
       <a [routerLink]="'/admin/timetable'" class="mr-2 ml-2"><button class="btn btn-outline-primary">Timetable</button></a>
+      <a [routerLink]="'/admin/livestream'" class="mr-2 ml-2"><button class="btn btn-outline-primary">Livestream</button></a>
       <a [routerLink]="'/admin/users'" class="mr-2 ml-2"><button class="btn btn-outline-primary">Users</button></a>
       <a [routerLink]="'/admin/chat'" class="mr-2 ml-2"><button class="btn btn-outline-primary">Chat</button></a>
       <a [routerLink]="'/admin/notifications'" class="mr-2 ml-2"><button class="btn btn-outline-primary">Notificaties</button></a>
