--- a/src/app/components/admin/adminroom/adminroom.component.html
+++ b/src/app/components/admin/adminroom/adminroom.component.html
@@ -2,6 +2,7 @@
 
 <div class="container mt-5 mb-5" id="wrapper">
   <h6>{{roomName}}</h6>
+  <h6 class="text-muted">{{messages.length}} messages</h6>
   <hr>
 
   <div class="row mt-5 mb-3" id="titles">
