faq en livestream desktop css

--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,8 +1,6 @@
 <app-header></app-header>
-
+<div class="container-grid">
 <div class="pagina">
-    <a href="/"><img src="assets/images/door.png" alt="exit"></a>
-    <h2 class="pagetitle">FAQ</h2>
 <ol>
     <li><h3 class="subtititle">Wat is de final show?</h3>
         <p>De Final Show is een evenement waar de studenten van de Erasmushogeschool Brussel in de spotlight worden gezet. Hier kunnen ze tonen waar ze de voorbije maanden mee bezig zijn geweest.
@@ -18,4 +16,6 @@
     <li><h3>Andere vraag of probleem?</h3>
         <p>Contacteer een moderator in de netwerk kamer. Zij zullen u met veel plezier verder helpen.</p></li>
 </ol>
+</div>
+<div id="filler"></div>
 </div>
