--- a/src/app/components/livestream/livestream/livestream.component.scss
+++ b/src/app/components/livestream/livestream/livestream.component.scss
@@ -36,14 +36,72 @@
 //     font-size: 13pt;
 // }
 
-@media only screen and (min-width: 768px) {
+.head{
+  display: flex;
+  height: 50px;
+  align-items: center;
+  //width: 99.5vw;
+  justify-content: flex-start;
+  font-weight: bold;
+  box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
+  //margin-left: -5%;
+.status{
+  height: 100%;
+  display: flex;
+  //align-items: center;
+      p {
+        font-weight: 400;
+      }
+  .state{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #FF6B6B;
+    margin: auto 0;
+  }
+}
+.event{
+  p{
+    margin-left: 2em;
+    font-weight: 400;
+  }
+}
+}
+
+
+@media only screen and (min-width: 769px) {
   .video-container{
   grid-column: 2/ span 7;
   grid-row: 4/ span 2;
   margin-top: 0;
 }
   .chat{
-    grid-column: 8/ span 3;
+    grid-column: 9/ span 3;
     grid-row: 4/ span 3;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
+  }
+  .head{
+    grid-column: 2/ span 7;
+    grid-row: 6/ span 1;
+    align-self: end;
+  }
+  .container-grid{
+    grid-template-rows: 60px 60px 20px 1fr 1fr 1fr minmax(60px, 1fr);
+}
+  .status{
+    align-items: center;
+    padding-right: 2vw;
+    padding-left: 1em;;
+    p{
+      margin-left: 1em;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .status{
+    align-items: center;
+    justify-content: space-evenly;
+    width: 30%;
   }
 }
