--- a/src/app/components/livestream/livestream/livestream.component.scss
+++ b/src/app/components/livestream/livestream/livestream.component.scss
@@ -79,14 +79,19 @@
     grid-column: 9/ span 3;
     grid-row: 4/ span 3;
     box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
+    background-color: #fff;
   }
   .head{
     grid-column: 2/ span 7;
     grid-row: 6/ span 1;
     align-self: end;
+    background-color: #fff;
+    margin-top: 1vw;
   }
   .container-grid{
-    grid-template-rows: 60px 60px 20px 1fr 1fr 1fr minmax(60px, 1fr);
+    grid-template-rows: 60px 60px 20px auto auto auto minmax(60px, 1fr);
+    background-image: url("../../../../assets/images/medialab_closeup_achetrgrond.png");
+    background-size: cover;
 }
   .status{
     align-items: center;
