--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -43,3 +43,10 @@ ul{
     font-weight: 700;
 }
 
+@media only screen and (min-width: 769px) {
+    ul{
+        grid-column: 2/ span 3;
+        grid-row: 4/ span 3;
+        margin: 0;
+    }
+}
