save scroll position in room-nav, sort time table

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -1,13 +1,12 @@
+<app-header></app-header>
 <div *ngFor='let event of data' class="pagina">
-  <app-header></app-header>
   <div class="red-square">
-    <img [src]="event['img']" [alt]="event['name']" id='eventImage'>
-    <img id="eventIcon">
+    <img [src]="event['icon']" [alt]="event['name']" id='eventIcon'>
   </div>
   <div class="tekst-event">
     <h1 class="subtititle">{{event['name']}}</h1>
     <p>{{event['desc']}}</p>
-    <h2 class="subtititle">credits:</h2>
+    <h2 class="subtititle">credits to:</h2>
   </div>
   <p id="time" class="subtititle">{{service.displayTime(event['time'])}}</p>
 </div>
