--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -42,4 +42,10 @@
         text-decoration: underline;
     }
 
+    #eventIcon{
+        width: 100%;
+        height: 90%;
+        margin-top: 3%;
+    }
+
 }
