--- a/src/app/components/timetable/timetable.component.html
+++ b/src/app/components/timetable/timetable.component.html
@@ -12,6 +12,6 @@
             </div>
         </li>
     </ul>
-    <!-- <app-event></app-event> -->
+    <app-event *ngIf="isDesktop"></app-event>
 </div>
 
