--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -25,7 +25,7 @@
                 <div>
                   <div><span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
                   </div>
-                  <p>{{ msg.content }}</p>
+                  <p [ngClass]="{'msg-deleted': msg.deleted}">{{ msg.content }}</p>
                 </div>
               </article>
             </div>
@@ -35,7 +35,7 @@
                 <div>
                   <div><span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
                   </div>
-                  <p>{{ msg.content }}</p>
+                  <p [ngClass]="{'msg-deleted': msg.deleted}">{{ msg.content }}</p>
                 </div>
                 <!-- <div class="user flex column">
                       <img [src]="'assets/man.svg'" width="50px">
@@ -71,8 +71,8 @@
               class="flex center row left deleted message-content">
               <article>
                 <div>
-                  <div><span class="tag is-dark ">{{ msg.user?.displayName || msg.user?.uid }}</span></div>
-                  <p>{{ msg.content }}</p>
+                  <div><span class="tag is-dark ">{{ msg.user?.displayName || msg.user?.uid }} - {{msg.user?.function}}</span></div>
+                  <p [ngClass]="{'msg-deleted': msg.deleted}">{{ msg.content }}</p>
                 </div>
               </article>
             </div>
@@ -86,8 +86,8 @@
                   <img [src]="'assets/man.svg'" width="50px">
                 </div> -->
                 <div>
-                  <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
-                  <p>{{ msg.content }}</p>
+                  <span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }} - {{msg.user?.function}}</span>
+                  <p [ngClass]="{'msg-deleted': msg.deleted}">{{ msg.content }}</p>
                 </div>
 
               </article>
@@ -98,7 +98,7 @@
               <div *ngIf="msg.uid !== user.uid && msg.hand === true;" class="flex center row left hand message-content">
                 <article>
                   <div>
-                    <div><span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }}</span>
+                    <div><span class="tag is-dark">{{ msg.user?.displayName || msg.user?.uid }} - {{msg.user?.function}}</span>
                     </div>
                     <p>👏</p>
                   </div>
