begin desktop versie programma

--- a/src/app/components/timetable/timetable.component.html
+++ b/src/app/components/timetable/timetable.component.html
@@ -12,6 +12,8 @@
             </div>
         </li>
     </ul>
-    <app-event *ngIf="isDesktop"></app-event>
+    <div class="event-detail">
+        <!-- <app-event *ngIf="isDesktop"></app-event> -->
+    </div>
 </div>
 
