--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -21,32 +21,60 @@ ul{
         h3{
             margin-left: 5vw;
         }
-        .red-arrow{
-            width: 10%;
-            height: 100%;
-            background-color: $red;
-            display: flex;
-            align-items: center;
-            img{
-                margin: 0 auto;
-            }
         }
-    }
 }
 
 .time-text {
     width: 20%;
-    margin: auto;
     text-align: center;
     -webkit-transform: rotate(-90deg);
     font-size: 20px;
     font-weight: 700;
 }
 
+//desktop
 @media only screen and (min-width: 769px) {
     ul{
         grid-column: 2/ span 3;
         grid-row: 4/ span 3;
         margin: 0;
+        overflow-y: scroll;
+        -ms-overflow-style: none;
+        max-height: 100%;
+    }
+    ul::-webkit-scrollbar{
+        display:none;
+    }
+    .time-text{
+        margin: 20px auto 0 auto;
+    }
+    .event-detail{
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+        width: 100%;
+        max-height: 100%;
+        grid-column: 5/ span 7;
+        grid-row: 4/ span 3;
+    }
+}
+
+//mobile
+@media only screen and (max-width: 769px) {
+    .time-text{
+        margin: auto;
+    }
+    .red-arrow{
+        width: 10%;
+        height: 100%;
+        background-color: $red;
+        display: flex;
+        align-items: center;
+
+        img{
+            margin: 0 auto;
+        }
+
+    }
+    .event-detail{
+        display: none;
     }
 }
