Dynamic header titles

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
 
       <div class="body">
         <h1>Final Show</h1>
-        <p>Room Navigation</p>
+        <p>{{title}}</p>
       </div>
       <div class="profile">
 
