--- a/src/app/components/network/network/network.component.html
+++ b/src/app/components/network/network/network.component.html
@@ -1,4 +1,4 @@
-<app-header class="yellow"></app-header>
+<app-header class="yellow" title="Netwerk"></app-header>
 <div (click)='closeSearch()'>
   <div class="container">
     <!-- <div class="contacts">
