--- a/src/app/components/timetable/timetable.component.html
+++ b/src/app/components/timetable/timetable.component.html
@@ -1,11 +1,11 @@
 <div class="wrapper container-grid" id="wrapper">
-    <app-header></app-header>
+    <app-header title='Programma'></app-header>
     <ul>
         <li *ngFor='let event of timetable' class="timetable-list-item">
             <span class="time-text">{{displayTime(event["time"]) }}</span>
             <div class="event-div">
                 <a [routerLink]="'/timetable/' + event['name']">
-                    <h3 class="title">{{event["name"]}}</h3> 
+                    <h3 class="title">{{event["name"]}}</h3>
                     <div class="red-arrow"><img src="../../../assets/images/arrow-white.svg"></div>
                 </a>
                 <!-- <p class="info-text">{{event["desc"]}}</p> -->
