timeTable desktop fix

--- a/src/app/components/timetable/timetable.component.html
+++ b/src/app/components/timetable/timetable.component.html
@@ -13,7 +13,7 @@
         </li>
     </ul>
     <div class="event-detail">
-        <!-- <app-event *ngIf="isDesktop"></app-event> -->
+        <app-desktopevent [timeTable] = "timetable" ></app-desktopevent>
     </div>
 </div>
 
