--- a/src/app/components/desktopevent/desktopevent.component.html
+++ b/src/app/components/desktopevent/desktopevent.component.html
@@ -1,5 +1,4 @@
-<app-header></app-header>
-<div *ngFor='let event of data' class="pagina">
+<div *ngFor='let event of timeTable' class="pagina">
   <div class="red-square">
     <img [src]="event['icon']" [alt]="event['name']" id='eventIcon'>
   </div>
