--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -35,15 +35,50 @@
     .pagina{
         grid-column: 2 / span 6;
         grid-row: 4/ span 3;
-        overflow-y: scroll;
+        direction: rtl;
+        overflow-y:auto; 
         -ms-overflow-style: none;
         max-height: 100%;
+        padding: 0 1em 1em 4em;
         box-shadow: 0px 3px 6px rgba(0,0,0,0.09);
-        padding: 0 1em 1em 1em;
+
+        .scrollable-content{
+            
+            padding: 0 1em 1em 1em;
+            direction: ltr;
+        }
     }
-    .pagina::-webkit-scrollbar{
-        display:none;
+
+    // scrollbar styling reference: - https://stackoverflow.com/questions/50817727/change-scrollbar-height
+    //                              - https://css-tricks.com/custom-scrollbars-in-webkit/
+
+    .pagina::-webkit-scrollbar {
+        display: block;
+        width: 5px;
     }
+    .pagina::-webkit-scrollbar-track {
+        background: transparent;
+        background-clip: content-box;
+        border: 4px solid transparent;
+    }
+        
+    .pagina::-webkit-scrollbar-thumb {
+        background-color: grey;
+        max-height: 10px;
+        border-right: none;
+        border-left: none;
+    }
+    
+    .pagina::-webkit-scrollbar-track-piece:end {
+        margin-bottom: 10%; 
+    }
+    
+    .pagina::-webkit-scrollbar-track-piece:start {
+        background: transparent;
+        margin-top: 10%;
+    }
+
+    
     #filler{
         grid-column: 8/ span 4;
         grid-row: 4/ span 3;
