--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -2,7 +2,7 @@
 <div class="container-grid">
 
 
-  <div class="pagina">
+  <div class="pagina custom-scroll">
     <div class="scrollable-content">
       <ol>
         <li>
