--- a/src/app/components/timetable/timetable.component.html
+++ b/src/app/components/timetable/timetable.component.html
@@ -3,13 +3,17 @@
     <ul>
         <li *ngFor='let event of timetable' class="timetable-list-item">
             <span class="time-text">{{displayTime(event["time"]) }}</span>
-            <div class="event-div">
+            <div class="event-div event-mobile">
                 <a [routerLink]="'/timetable/' + event['name']">
                     <h3 class="title">{{event["name"]}}</h3>
                     <div class="red-arrow"><img src="../../../assets/images/arrow-white.svg"></div>
                 </a>
                 <!-- <p class="info-text">{{event["desc"]}}</p> -->
             </div>
+            <div class="event-div event-desktop">
+                    <h3 class="title">{{event["name"]}}</h3>
+            </div>
+
         </li>
     </ul>
     <div class="event-detail">
