--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -45,15 +45,31 @@ ul{
     ul::-webkit-scrollbar{
         display:none;
     }
+    .event-detail::-webkit-scrollbar{
+        display:none;
+    }
     .time-text{
         margin: 20px auto 0 auto;
     }
+    .event-mobile{
+        display: none;
+    }
+    .event-desktop{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        h3{
+            margin-left: 1em;
+        }
+    }
     .event-detail{
-        box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
-        width: 100%;
-        max-height: 100%;
         grid-column: 5/ span 7;
         grid-row: 4/ span 3;
+        margin: 0;
+        overflow-y: scroll;
+        -ms-overflow-style: none;
+        max-height: 100%;
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
     }
 }
 
@@ -68,12 +84,14 @@ ul{
         background-color: $red;
         display: flex;
         align-items: center;
-
         img{
             margin: 0 auto;
         }
-
     }
+    .event-desktop{
+        display: none;
+    }
+
     .event-detail{
         display: none;
     }
