bugfixes & removed dbservice

--- a/src/app/components/desktopevent/desktopevent.component.html
+++ b/src/app/components/desktopevent/desktopevent.component.html
@@ -7,5 +7,5 @@
     <p>{{event['desc']}}</p>
     <h2 class="subtititle">credits to:</h2>
   </div>
-  <p id="time" class="subtititle">{{service.displayTime(event['time'])}}</p>
+  <p id="time" class="subtititle">{{displayTime(event['time'])}}</p>
 </div>
