--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -8,5 +8,5 @@
     <p>{{event['desc']}}</p>
     <h2 class="subtititle">credits to:</h2>
   </div>
-  <p id="time" class="subtititle">{{service.displayTime(event['time'])}}</p>
+  <p id="time" class="subtititle">{{displayTime(event['time'])}}</p>
 </div>
