new render home screen

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
 
     <div id="campus" [ngClass]="{'hide': hiddenSplash}">
       <a class="button" [routerLink]="['/rooms']" routerLinkActive="router-link-active">Enter Campus Kaai</a>
-      <img src="assets/images/campusV3.png" alt="campus kaai">
+      <img src="assets/images/campus_Final_render_psLongerBlock.png" alt="campus kaai">
 
     </div>
 
