--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -114,7 +114,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
     background: rgb(255, 255, 255);
