--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header back="true"></app-header>
 <div *ngFor='let event of data' class="pagina">
   <div class="red-square">
     <img [src]="event['icon']" [alt]="event['name']" id='eventIcon'>
