--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -1,14 +1,16 @@
+
 .container{
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-.body{
-  height: 100%;
-  width: 100%;
+  max-height: 55vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: relative;
   .messages{
-height: 90%;
+    margin-bottom: 4em;
 width: 100%;
   }
   .userinput{
@@ -20,6 +22,11 @@ width: 100%;
     align-items: center;
     height: 10%;
     //width: 90%;
+    position: absolute;
+    bottom: 0;
+    width: 90%;
+    padding: 1em 0;
+    background: white;
     .send,.clap{
        display: flex;
        align-items: center;
@@ -43,17 +50,18 @@ width: 100%;
 
   }
 }
-}
+
 @media only screen and (max-width: 768px) {
+  .container{
+    max-height: 50vh;
+    position: static;
+  }
   .userinput{
     position: absolute;
     bottom: 0;
-    //justify-content: space-around;
     width: 90%;
+
   }
 }
 
-@media only screen and (max-width: 768px) {
-  .userinput{
-  }
-}
+
