--- a/src/app/components/network/login/login.component.html
+++ b/src/app/components/network/login/login.component.html
@@ -32,7 +32,7 @@
               </section>
             </form>
             <section>
-              <button class="google-btn" (click)="auth.googleSignIn()">
+              <button class="google-btn" (click)="auth.googleSignIn(id)">
                 <div class="google-icon-wrapper">
                   <img class="google-icon-svg"
                     src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
@@ -45,6 +45,7 @@
         </article>
 
     <p>Nog geen account?</p>
-    <button [routerLink]="['/register']" type="button" class="txt-light">REGISTREER</button>
+    <button *ngIf="id === 'livestream'" [routerLink]="['/register',id]" type="button" class="txt-light">REGISTREER</button>
+    <button *ngIf="id !== 'livestream'"[routerLink]="['/register']" type="button" class="txt-light">REGISTREER</button>
   </article>
 </section>
