--- a/src/app/components/network/register/register.component.html
+++ b/src/app/components/network/register/register.component.html
@@ -1,19 +1,3 @@
-<!-- <div  >
-  <div class="logout" (click)="auth.signOut()">
-    logout
-  <div class="cross">
-    <div class="bar1"></div>
-    <div class="bar2"></div>
-  </div>
-</div> -->
-
-<!-- {{ goToHome() }} -->
-<!-- </div> -->
-
-
-<!-- <input placeholder="Username" type='text' #username>
- <button class="button" (click)="auth.AnonymousSignIn(username.value)">Login with Username</button>
-  <span class="txt-light">or</span> -->
 <app-header class="yellow"></app-header>
 <section id="RegisterForm">
 
@@ -150,6 +134,7 @@
       </section>
     </article>
     <p>Al een account?</p>
-    <button [routerLink]="['/login']" type="button" class="txt-light">LOGIN</button>
+    <button *ngIf="id === 'livestream'" [routerLink]="['/login',id]" type="button" class="txt-light">LOGIN</button>
+    <button *ngIf="id !== 'livestream'"[routerLink]="['/login']" type="button" class="txt-light">LOGIN</button>
   </article>
 </section>
