--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -38,12 +38,9 @@ ul{
         grid-column: 2/ span 3;
         grid-row: 4/ span 3;
         margin: 0;
-        overflow-y: scroll;
+        overflow-y: auto;
         -ms-overflow-style: none;
         max-height: 100%;
-    }
-    ul::-webkit-scrollbar{
-        display:none;
     }
     .event-detail::-webkit-scrollbar{
         display:none;
