Redirect-component added + minor changes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <section class="container display flex row">
     <div class="exit">
-      <img src="assets/images/door.svg" *ngIf="back !== 'true'" [routerLink]="['/rooms']"
+      <img src="assets/images/door.svg" *ngIf="back !== 'true'" (click)="checkDevice()"
         routerLinkActive="router-link-active" alt="">
       <img src="assets/images/back.svg" *ngIf="back === 'true'" (click)="goBack()" routerLinkActive="router-link-active"
         alt="">
