--- a/src/app/components/desktopevent/desktopevent.component.scss
+++ b/src/app/components/desktopevent/desktopevent.component.scss
@@ -6,7 +6,7 @@
 }
 
 .red-square{
-    background-color:  $red;
+    background-color:  $blue;
     height: 40%;
     width: 48.5vw;
     display: flex;
