--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,4 +1,4 @@
-<app-header title="Help Center"></app-header>
+<app-header class="yellow" title="Help Center"></app-header>
 <div class="container-grid">
 
 
