--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,5 @@
+@import '~src/styles.scss';
+
 .header {
   z-index: 10;
   height: 60px;
@@ -51,9 +53,8 @@
 
 
 // header
-:host-context(.yellow) .header {
-  background: #F9D48A;
-}
+
+
 
 //desktop
 @media only screen and (min-width: 769px) {
@@ -66,5 +67,21 @@
 @media only screen and (max-width: 769px) {
   .container{
     width: 90%;
+  }
+  
+  :host-context(.red) .header {
+    background: $red;
+  }
+  
+  :host-context(.yellow) .header {
+    background: $yellow;
+  }
+  
+  :host-context(.blue) .header {
+    background: $blue;
+  }
+  
+  :host-context(.green) .header {
+    background: $green;
   }
 }
