--- a/src/app/components/livestream/livestream/livestream.component.html
+++ b/src/app/components/livestream/livestream/livestream.component.html
@@ -1,6 +1,6 @@
 
-
-<app-header title="Livestream"></app-header>
+<!-- green or white header?? -->
+<app-header class= "green" title="Livestream"></app-header> 
 <div class="page-wrap container-grid">
 
 <div class="video-container">
