--- a/src/app/components/network/login/login.component.html
+++ b/src/app/components/network/login/login.component.html
@@ -1,6 +1,6 @@
 
 <section id='login'>
-  <app-header class="yellow"></app-header>
+  <app-header class="red"></app-header>
   <article class="container login-wrapper">
     <h2>Je bent nog niet ingelogd.</h2>
     <p>Om met andere mensen te kunnen chatten hebben we even je tijd nodig om te registreren of in te loggen. Andere
