--- a/src/app/components/network/login/login.component.scss
+++ b/src/app/components/network/login/login.component.scss
@@ -1,3 +1,4 @@
+@import '~src/styles.scss';
 #login {
   width: 100%;
 
@@ -41,7 +42,7 @@
         border: 1px solid #DBDBDB;
 
         &:focus {
-          border-color: #F9D48A;
+          border-color: $red;
           box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
         }
       }
