--- a/src/app/components/network/register/register.component.scss
+++ b/src/app/components/network/register/register.component.scss
@@ -1,5 +1,5 @@
 
-
+@import '~src/styles.scss';
 #RegisterForm {
   text-align: left;
   margin-top: 100px;
@@ -33,7 +33,7 @@ textarea{
       border: 1px solid #DBDBDB;
 
       &:focus {
-        border-color: #F9D48A;
+        border-color: $red;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
       }
     }
